--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
   "scripts": {},
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "babel-polyfill": "^6.7.4",
-    "gulp-install": "^0.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.11.2",
     "gulp": "git://github.com/gulpjs/gulp.git#4.0",
-    "gulp-install": "^0.6.0",
     "gulp-sass": "^2.2.0",
     "webpack": "^1.12.14"
   }
