--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {},
   "author": "",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "window.requestanimationframe": "^1.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.11.2",
     "gulp": "git://github.com/gulpjs/gulp.git#4.0",
     "gulp-sass": "^2.2.0",
